Type hierarchy is also working, allow adding sub deserializer

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -7,6 +7,7 @@ sourceSets {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     compile "org.json:json:$json_version"
 
