--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:2.3.3'
+
+        classpath 'com.novoda:bintray-release:0.3.4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -13,6 +15,15 @@ buildscript {
 }
 
 allprojects {
+    ext {
+        publishVersion = '0.1'
+
+        kotlinVersion = '1.1.4-3'
+        jsonVersion = '20170516'
+
+        junitVersion = '4.12'
+    }
+
     repositories {
         jcenter()
     }
