--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,32 +1,44 @@
 apply plugin: 'kotlin'
 
+apply plugin: 'com.novoda.bintray-release'
+
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
     test.java.srcDirs += 'src/test/kotlin'
 }
 
+sourceCompatibility = JavaVersion.VERSION_1_6
+targetCompatibility = JavaVersion.VERSION_1_6
+
+repositories {
+    jcenter()
+}
+
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    compile "org.json:json:$jsonVersion"
 
-    compile "org.json:json:$json_version"
-
-    testCompile "junit:junit:$junit_version"
+    testCompile "junit:junit:$junitVersion"
 }
 
 buildscript {
-    ext {
-        kotlin_version = '0.14.449'
-        json_version = '20141113'
-
-        junit_version = '4.12'
-    }
 
     repositories {
         mavenCentral()
     }
 
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
+}
+
+publish {
+    artifactId = 'forge'
+    autoPublish = true
+    desc = 'Functional style JSON parsing written in Kotlin'
+    groupId = 'com.github.kittinunf.forge'
+    licences = ['MIT']
+    publishVersion = parent.ext.publishVersion
+    uploadName = 'Forge'
+    website = 'https://github.com/kittinunf/Forge'
 }
