--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -2,6 +2,10 @@ apply plugin: 'kotlin'
 
 apply plugin: 'com.novoda.bintray-release'
 
+apply plugin: 'maven'
+
+group = 'com.github.kittinunf.forge'
+
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
     test.java.srcDirs += 'src/test/kotlin'
