--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'kotlin'
-
 apply plugin: 'com.novoda.bintray-release'
-
 apply plugin: 'maven'
+apply plugin: 'jacoco'
 
 group = 'com.github.kittinunf.forge'
 
@@ -33,6 +32,13 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled false
     }
 }
 
