--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ cache:
     - $HOME/.gradle
 
 before_script:
+  - chmod +x deploy_bintray.sh
 
 script:
   - ./gradlew test --info
@@ -15,3 +16,4 @@ script:
 after_success:
   - ./gradlew jacocoTestReport
   - bash <(curl -s https://codecov.io/bash)
+  - ./deploy_bintray.sh
