--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0-rc1'
 
         classpath 'com.novoda:bintray-release:0.5.0'
 
@@ -18,7 +18,7 @@ allprojects {
     ext {
         publishVersion = '0.3.0'
 
-        kotlinVersion = '1.1.4-3'
+        kotlinVersion = '1.1.51'
         jsonVersion = '20170516'
 
         junitVersion = '4.12'
