--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0'
 
         classpath 'com.novoda:bintray-release:0.5.0'
 
@@ -18,7 +19,7 @@ allprojects {
     ext {
         publishVersion = '0.3.0'
 
-        kotlinVersion = '1.1.4-3'
+        kotlinVersion = '1.1.51'
         jsonVersion = '20170516'
 
         junitVersion = '4.12'
