--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,12 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+artifactVersion=1.0.0-alpha1
+artifactGroup=com.github.kittinunf.forge
+
+kotlinVersion=1.3.30
+kotlinterVersion=1.24.0
+bintrayVersion=1.8.4
+jacocoVersion=0.8.3
+
