--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,5 @@ kotlinVersion=1.3.30
 kotlinterVersion=1.24.0
 bintrayVersion=1.8.4
 jacocoVersion=0.8.3
-
+jsonVersion=20170516
+junitVersion=4.12
