--- a/gradle.properties
+++ b/gradle.properties
@@ -20,9 +20,11 @@
 artifactVersion=1.0.0-alpha1
 artifactGroup=com.github.kittinunf.forge
 
-kotlinVersion=1.3.30
-kotlinterVersion=1.24.0
 bintrayVersion=1.8.4
 jacocoVersion=0.8.3
 jsonVersion=20170516
 junitVersion=4.12
+koptionalVersion=1.6.0
+kotlinVersion=1.3.30
+kotlinterVersion=1.24.0
+resultVersion=2.2.0
